--- a/SNRepairApplication/src/main/resources/application.properties
+++ b/SNRepairApplication/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=SNRepairApplication
 
+server.port=5000
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Carrepaire
+spring.datasource.username=root
+spring.datasource.password=Admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:SNrepair}
-spring.datasource.username=${RDS_USERNAME:root}
-spring.datasource.password=${RDS_PASSWORD:Admin}
+
 
 # Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-server.servlet.session.cookie.name=JSESSIONID
-server.servlet.session.timeout=30m
-server.port=8080
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
