--- a/SNRepairApplication/src/main/resources/application.properties
+++ b/SNRepairApplication/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=SNRepairApplication
 
 server.port=5000
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Carrepaire
+spring.datasource.url=jdbc:mysql://mysql-9dqr.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=Admin
+spring.datasource.password=TAofEHUlduKcpbBQBxZTYAIgouowOlRS
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:Carrepaire}
+#spring.datasource.username=${DB_USERNAME:root}
+#spring.datasource.password=${DB_PASSWORD:Admin}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Drive
+spring.profiles.active=${ENV:dev}
 
 
 # Hibernate Configuration
