--- a/SNRepairApplication/src/main/resources/application.properties
+++ b/SNRepairApplication/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=SNRepairApplication
 
 server.port=5000
-spring.datasource.url=jdbc:mysql://mysql-9dqr.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=TAofEHUlduKcpbBQBxZTYAIgouowOlRS
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://mysql-9dqr.railway.internal:3306/railway
+#spring.datasource.username=root
+#spring.datasource.password=TAofEHUlduKcpbBQBxZTYAIgouowOlRS
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:Carrepaire}
 #spring.datasource.username=${DB_USERNAME:root}
@@ -14,8 +14,8 @@ spring.profiles.active=${ENV:dev}
 
 
 # Hibernate Configuration
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
