--- a/SNRepairApplication/src/main/resources/application-dev.properties
+++ b/SNRepairApplication/src/main/resources/application-dev.properties
@@ -1,9 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Carrepaire
+#spring.datasource.url=jdbc:mysql://localhost:3306/Carrepaire
+#spring.datasource.username=root
+#spring.datasource.password=Admin
+#
+#
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=Admin
+spring.datasource.password=EzRkWZUNbiNSBVQFyHYHWUTJNfTDJNDA
 
-
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=DEBUG
