--- a/SNRepairApplication/src/main/resources/application-dev.properties
+++ b/SNRepairApplication/src/main/resources/application-dev.properties
@@ -16,5 +16,5 @@ spring.datasource.password=EzRkWZUNbiNSBVQFyHYHWUTJNfTDJNDA
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
