--- a/SNRepairApplication/src/main/resources/application.properties
+++ b/SNRepairApplication/src/main/resources/application.properties
@@ -1,21 +1,15 @@
 spring.application.name=SNRepairApplication
 
 server.port=5000
-#spring.datasource.url=jdbc:mysql://mysql-9dqr.railway.internal:3306/railway
-#spring.datasource.username=root
-#spring.datasource.password=TAofEHUlduKcpbBQBxZTYAIgouowOlRS
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:Carrepaire}
-#spring.datasource.username=${DB_USERNAME:root}
-#spring.datasource.password=${DB_PASSWORD:Admin}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Drive
-spring.profiles.active=${ENV:dev}
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:Carrepaire}
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD:Admin}
 
 # Hibernate Configuration
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
