--- a/SNRepairApplication/src/main/resources/application.properties
+++ b/SNRepairApplication/src/main/resources/application.properties
@@ -3,9 +3,13 @@ spring.application.name=SNRepairApplication1
 server.port=5000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Carrepaire
-spring.datasource.username=root
-spring.datasource.password=Admin
+#spring.datasource.url=jdbc:mysql://localhost:3306/Carrepaire
+#spring.datasource.username=root
+#spring.datasource.password=Admin
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:Carrepaire}
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD:Admin}
+
 
 # Hibernate Configuration
 spring.jpa.show-sql=true
