--- a/SNRepairApplication/src/main/resources/application.properties
+++ b/SNRepairApplication/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${
 spring.datasource.username=${RDS_USERNAME:root}
 spring.datasource.password=${RDS_PASSWORD:Admin}
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+
 
 # Hibernate Configuration
 spring.jpa.show-sql=true
